temp/objects/TH_SessionID__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used to store the OAuth token for the Trailhead API
To derive it:

Ensure you have Python 3.6 installed and have installed requests using pip3
Change to the folder that has the script &quot;oauth3_login.py&quot; in it.
On Stephen&apos;s MacBook Air it is in
&quot;/Users/stephen,stanley/Google Drive/Documents/Personal&quot;

(copy and execute this command to go straight there:)

$ cd &quot;/Users/stephen.stanley/Google Drive/Documents/Personal&quot;

MAKE SURE YOU ARE ON THE VPN

use this command:

$ python3 oauth3_login.py

Enter your username and password when prompted

On this custom setting, click on &quot;Manage&quot;, then &quot;Edit&quot; and paste the entire string after the word Bearer following the line &quot;access_token&quot;, completely replacing the existing string value</description>
    <fields>
        <fullName>Access_Token__c</fullName>
        <label>Access Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refresh_Token__c</fullName>
        <label>Refresh Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SID__c</fullName>
        <label>SID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TH_SessionID</label>
</CustomObject>